engine/include/grapple/engine.h

typedef struct Grapple_Engine Grapple_Engine;
/**
 * Engine configuration. Zero-initialise and set what matters; every field
 * has a sensible default, so `Grapple_CreateEngine(NULL)` is a valid way
 * to start.
 */
typedef struct Grapple_EngineConfig
{
    const char *title;   /**< window title; "Grapple" if NULL */
    int window_width;    /**< window size in pixels; 1280x720 if zero */
    int window_height;
    /** The coordinate space the game is written in — its *reference*
     *  resolution, not the resolution it renders at. 1920x1080 if zero.
     *
     *  Pick the aspect and the convenient number, not the target hardware:
     *  a game written at 1920x1080 renders natively at 4K, because the
     *  scale is applied to coordinates rather than to a rendered image. Art
     *  is a separate question — see Grapple_EngineAssetScale. */
    int design_width;
    int design_height;
    Grapple_EnginePresentation presentation;
    bool fullscreen;

    /* Opt-outs, not opt-ins: a zero-initialised config must give the
       documented defaults, so the fields that default to *on* are phrased
       as the thing you turn off. */
    bool no_vsync;    /**< vsync is on by default: free pacing, and it
                           quantises the frame delta for smoothing */
    bool fixed_size;  /**< windows are resizable by default */
    bool low_dpi;     /**< high-DPI is on by default */

    /** Upper limit on frames per second; 0 means "follow the display".
     *
     *  Vsync usually paces the loop for free, but not always — an occluded
     *  or off-screen window may not block on present, and some drivers
     *  ignore the request entirely. Left to itself the loop then free-runs
     *  at thousands of frames a second, burning battery to draw images
     *  nobody sees. The engine therefore sleeps out the remainder of each
     *  frame: by default to the display's refresh rate, or to this value
     *  when set. Use a negative value to disable the limiter outright. */
    int max_fps;

    int tick_rate;    /**< simulation steps per second; 60 if zero. 120 is
                           the other sensible value, and is worth it when the
                           engine is running physics. */
    int max_steps_per_frame; /**< catch-up cap; 5 if zero */
    float max_frame_seconds; /**< longer than this is a stall, not a slow
                                  frame, and the time is dropped; 0.25 if 0 */
    Grapple_EngineInterpolation interpolation;

    /** Graphics settings to start with — usually the result of
     *  Grapple_GraphicsResolve, which is how a config file and the command
     *  line reach the engine. NULL means Grapple_GraphicsDefaults().
     *
     *  These win over `presentation`, `no_vsync` and `max_fps` above, which
     *  remain for games that want nothing to do with settings files. */
    const struct Grapple_GraphicsSettings *graphics;

    /** Which of SDL's renderer backends to use. Zero means OpenGL, which is
     *  this engine's opinion — see Grapple_EngineBackend. */
    Grapple_EngineBackend backend;

    /** The program's command line, so the engine can honour the arguments
     *  it documents — `--media`, `--media-password`. Pass them straight
     *  through from main(); anything the engine does not recognise is left
     *  alone, because the game owns this command line.
     *
     *  Graphics settings are read from argv separately, by
     *  Grapple_GraphicsResolve, so that a game can inspect or override
     *  them before the engine exists. */
    int argc;
    char *const *argv;

    /** Where the game's assets are. NULL runs the default search — an
     *  embedded archive, then media.zip, media.dat and media/ — which is
     *  what almost every game should do. An explicit path here beats
     *  `--media` on the command line. See engine_media.h. */
    const char *media_path;
    /** Do not mount anything. For a game that manages its own VFS. */
    bool no_auto_mount;

    /** Headless: software renderer, no window. For tests and tools. */
    /** Leave the window hidden at creation.
     *
     *  The window is otherwise created hidden and shown once the renderer,
     *  presentation and display have been applied — no start-up flicker,
     *  and in front rather than behind whatever was already on screen. Set
     *  this when the game wants to decide the moment itself: a loading
     *  step to finish first, or a splash to draw into the first frame.
     *  Show it with Grapple_EngineShowWindow. */
    bool start_hidden;
    bool headless;
    /** Drive time with Grapple_EngineAdvance instead of the clock, so a
     *  test can simulate an hour of frames in a millisecond. */
    bool manual_clock;
    /** Concrete renderer selection ("auto", "directx11", "directx12", "vulkan",
     * "metal", "opengl", "opengles2", or "software"). NULL preserves the legacy
     * backend enum preference. Borrowed until Grapple_CreateEngine returns.
     * Explicit choices never fall back; --backend overrides this field. */
    const char *renderer_backend;
} Grapple_EngineConfig;
/* --- lifecycle ---------------------------------------------------------- */

/** Create an engine (and its window and renderer). `config` may be NULL for
 *  the defaults. Returns NULL and sets SDL_GetError() on failure. */
extern Grapple_Engine *Grapple_CreateEngine(const Grapple_EngineConfig *config);
extern void Grapple_DestroyEngine(Grapple_Engine *engine);
/** One iteration of the loop, for a game that wants to own its own. Returns
 *  false once the engine has been asked to stop. */
extern bool Grapple_EngineTick(Grapple_Engine *engine);
/** Frames rendered since the engine started. */
extern Uint64 Grapple_EngineFrameCount(Grapple_Engine *engine);
/* --- testing ------------------------------------------------------------ */

/** Advance the manual clock by `nanoseconds`.
 *
 *  Only meaningful when the engine was created with `manual_clock`. This is
 *  what makes the loop testable: a test can feed exact, or deliberately
 *  awful, frame times and assert on how many simulation steps came out. */
extern void Grapple_EngineAdvance(Grapple_Engine *engine, Uint64 nanoseconds);