modules/cpp/include/grapple/gen/sdl.h

inline constexpr auto& GetError = ::SDL_GetError;
inline constexpr auto& GetPlatform = ::SDL_GetPlatform;